--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=lostnfound
-spring.datasource.url=jdbc:mysql://localhost:3306/lostnfound?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC 
+spring.datasource.url=jdbc:mysql://localhost:3306/lostnfound 
 spring.datasource.username=root
-spring.datasource.password=tanguydev
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
