--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=lostnfound
-spring.datasource.url=jdbc:mysql://localhost:3306/lostnfound 
+spring.datasource.url=jdbc:mysql://localhost:3306/lostnfound
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=tanguydev
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
