--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,18 @@
 			<artifactId>hypersistence-utils-hibernate-60</artifactId>
 			<version>3.8.2</version>
 		</dependency>
+		
+		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-websocket</artifactId>
+      </dependency>
+		
+		
+		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-websocket</artifactId>
+</dependency>
+
 
 	</dependencies>
 
