--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=lostnfound
 spring.datasource.url=jdbc:mysql://localhost:3306/lostnfound
 spring.datasource.username=root
-spring.datasource.password=tanguydev
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.properties.hibernate.format_sql=true
