--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=lostnfound
-spring.datasource.url=jdbc:mysql://localhost:3306/lostnfound
+spring.datasource.url=jdbc:mysql://localhost:3306/lostnfound?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=tanguydev
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+logging.level.org.springframework.web.multipart=DEBUG
+logging.level.org.apache.catalina=DEBUG
+server.tomcat.basedir=./tmp
 
 
-spring.jpa.properties.hibernate.format_sql=true
