--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/lostnfound?sessionVariables=sq
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
@@ -10,5 +11,6 @@ spring.servlet.multipart.max-request-size=10MB
 logging.level.org.springframework.web.multipart=DEBUG
 logging.level.org.apache.catalina=DEBUG
 server.tomcat.basedir=./tmp
+
 
 
