--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.application.name=lostnfound
-spring.datasource.url=jdbc:mysql://localhost:3306/lostnfound
+spring.datasource.url=jdbc:mysql://localhost:3306/lostnfound?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=tanguydev
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# Dialecte Hibernate pour MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
